[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1"]
[ext_resource type="Theme" uid="uid://dyeqoaua6y1ah" path="res://main_theme.tres" id="2"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="CanvasLayer/CenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
text = "Game Over"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
